update: sdv version

--- a/notebooks/0-test-sdv.ipynb
+++ b/notebooks/0-test-sdv.ipynb
@@ -2,19 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21789aac-201b-4fce-955a-2e8768644c9f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: sdv in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (0.18.0)\n",
+      "Requirement already satisfied: pandas<2,>=1.1.3 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (1.2.4)\n",
+      "Requirement already satisfied: cloudpickle<3.0,>=2.1.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (2.2.1)\n",
+      "Requirement already satisfied: Faker<15,>=10 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (14.2.1)\n",
+      "Requirement already satisfied: tqdm<5,>=4.15 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (4.65.0)\n",
+      "Requirement already satisfied: ctgan<0.8,>=0.7.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (0.7.1)\n",
+      "Requirement already satisfied: graphviz<1,>=0.13.2 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (0.20.1)\n",
+      "Requirement already satisfied: numpy<2,>=1.20.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (1.24.3)\n",
+      "Requirement already satisfied: rdt<2,>=1.3.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (1.4.1)\n",
+      "Requirement already satisfied: sdmetrics<0.10,>=0.9.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (0.9.3)\n",
+      "Requirement already satisfied: deepecho<0.5,>=0.4.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (0.4.0)\n",
+      "Requirement already satisfied: copulas<0.9,>=0.8.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdv) (0.8.0)\n",
+      "Requirement already satisfied: scipy<2,>=1.5.4 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from copulas<0.9,>=0.8.0->sdv) (1.10.1)\n",
+      "Requirement already satisfied: matplotlib<4,>=3.4.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from copulas<0.9,>=0.8.0->sdv) (3.4.1)\n",
+      "Requirement already satisfied: torch<2,>=1.8.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from ctgan<0.8,>=0.7.0->sdv) (1.11.0)\n",
+      "Requirement already satisfied: packaging<22,>=20 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from ctgan<0.8,>=0.7.0->sdv) (21.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.4 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from Faker<15,>=10->sdv) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from pandas<2,>=1.1.3->sdv) (2023.3)\n",
+      "Requirement already satisfied: scikit-learn<2,>=0.24 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from rdt<2,>=1.3.0->sdv) (0.24.1)\n",
+      "Requirement already satisfied: psutil<6,>=5.7 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from rdt<2,>=1.3.0->sdv) (5.9.5)\n",
+      "Requirement already satisfied: plotly<6,>=5.10.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from sdmetrics<0.10,>=0.9.0->sdv) (5.14.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->copulas<0.9,>=0.8.0->sdv) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->copulas<0.9,>=0.8.0->sdv) (1.4.4)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->copulas<0.9,>=0.8.0->sdv) (3.0.9)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from matplotlib<4,>=3.4.0->copulas<0.9,>=0.8.0->sdv) (9.5.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from plotly<6,>=5.10.0->sdmetrics<0.10,>=0.9.0->sdv) (8.2.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from python-dateutil>=2.4->Faker<15,>=10->sdv) (1.16.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from scikit-learn<2,>=0.24->rdt<2,>=1.3.0->sdv) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from scikit-learn<2,>=0.24->rdt<2,>=1.3.0->sdv) (1.2.0)\n",
+      "Requirement already satisfied: typing-extensions in /Users/cory/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages (from torch<2,>=1.8.0->ctgan<0.8,>=0.7.0->sdv) (4.5.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/Users/cory/Documents/git/edge-synthetic-data-generator/venv/bin/python3.8 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "!pip install sdv"
+    "!pip install sdv==0.18.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "64498187-57e8-4f62-b597-d4d94950859e",
    "metadata": {},
    "outputs": [],
@@ -233,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
