--- a/notebooks/2-test-pivoted-model.ipynb
+++ b/notebooks/2-test-pivoted-model.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install sdv"
+    "!pip install sdv==0.18.0"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
