--- a/notebooks/12-generate-sensor-data.ipynb
+++ b/notebooks/12-generate-sensor-data.ipynb
@@ -26,7 +26,6 @@
     "# first, pip installs to ensure we have the correct packages\n",
     "\n",
     "!pip install torch==1.11.0  # version recommended by source\n",
-    "#!pip install git+https://github.com/gretelai/gretel-synthetics.git\n",
     "!pip install -U gretel-synthetics==0.19.0\n",
     "!pip install numpy==1.20.0  # for new concatenate feature\n",
     "!pip install kafka-python==2.0.2"
@@ -298,7 +297,7 @@
     "\n",
     "# Name of the topic for the producer to send messages.\n",
     "# Consumers will listen to this topic for events.\n",
-    "KAFKA_TOPIC = os.environ.get(\"KAFKA_TOPIC\") or \"sensor-data\""
+    "KAFKA_TOPIC = os.environ.get(\"KAFKA_TOPIC\", \"sensor-data\")"
    ]
   },
   {
@@ -359,10 +358,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "80b549d4-b5a0-4d5c-86a1-9735477035b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-01 01:00:33,358 : MainThread : WARNING : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092, exception was [Errno 8] nodename nor servname provided, or not known. Is your advertised.listeners (called advertised.host.name before Kafka 9) correct and resolvable?\n",
+      "2023-05-01 01:00:33,359 : MainThread : ERROR : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092 (AddressFamily.AF_UNSPEC)\n",
+      "2023-05-01 01:00:38,362 : MainThread : WARNING : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092, exception was [Errno 8] nodename nor servname provided, or not known. Is your advertised.listeners (called advertised.host.name before Kafka 9) correct and resolvable?\n",
+      "2023-05-01 01:00:38,363 : MainThread : ERROR : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092 (AddressFamily.AF_UNSPEC)\n",
+      "2023-05-01 01:00:38,364 : MainThread : INFO : Probing node bootstrap-0 broker version\n",
+      "2023-05-01 01:00:43,367 : MainThread : WARNING : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092, exception was [Errno 8] nodename nor servname provided, or not known. Is your advertised.listeners (called advertised.host.name before Kafka 9) correct and resolvable?\n",
+      "2023-05-01 01:00:43,368 : MainThread : ERROR : DNS lookup failed for kafka-cluster-kafka-bootstrap.edge-kafka.svc.cluster.local:9092 (AddressFamily.AF_UNSPEC)\n"
+     ]
+    },
+    {
+     "ename": "NoBrokersAvailable",
+     "evalue": "NoBrokersAvailable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNoBrokersAvailable\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m produce_data(my_slice)\n",
+      "Cell \u001b[0;32mIn[29], line 3\u001b[0m, in \u001b[0;36mproduce_data\u001b[0;34m(sensor_slice)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mproduce_data\u001b[39m(sensor_slice):\n\u001b[1;32m      2\u001b[0m     \u001b[39m# create the producer\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     producer \u001b[39m=\u001b[39m KafkaProducer(\n\u001b[1;32m      4\u001b[0m         bootstrap_servers\u001b[39m=\u001b[39;49m[KAFKA_BOOTSTRAP_SERVER],\n\u001b[1;32m      5\u001b[0m         security_protocol\u001b[39m=\u001b[39;49mKAFKA_SECURITY_PROTOCOL,\n\u001b[1;32m      6\u001b[0m         sasl_plain_username\u001b[39m=\u001b[39;49mKAFKA_USERNAME,\n\u001b[1;32m      7\u001b[0m         sasl_plain_password\u001b[39m=\u001b[39;49mKAFKA_PASSWORD,\n\u001b[1;32m      8\u001b[0m         api_version_auto_timeout_ms\u001b[39m=\u001b[39;49m\u001b[39m30000\u001b[39;49m,\n\u001b[1;32m      9\u001b[0m         max_block_ms\u001b[39m=\u001b[39;49m\u001b[39m900000\u001b[39;49m,\n\u001b[1;32m     10\u001b[0m         request_timeout_ms\u001b[39m=\u001b[39;49m\u001b[39m450000\u001b[39;49m,\n\u001b[1;32m     11\u001b[0m         acks\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mall\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m     12\u001b[0m         key_serializer\u001b[39m=\u001b[39;49m\u001b[39mstr\u001b[39;49m\u001b[39m.\u001b[39;49mencode,\n\u001b[1;32m     13\u001b[0m     )\n\u001b[1;32m     15\u001b[0m     \u001b[39m# sending our data 10 rows per second\u001b[39;00m\n\u001b[1;32m     16\u001b[0m     \u001b[39mfor\u001b[39;00m row_index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m720\u001b[39m, \u001b[39m10\u001b[39m):\n\u001b[1;32m     17\u001b[0m         \u001b[39m# select our 10 rows\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages/kafka/producer/kafka.py:381\u001b[0m, in \u001b[0;36mKafkaProducer.__init__\u001b[0;34m(self, **configs)\u001b[0m\n\u001b[1;32m    378\u001b[0m reporters \u001b[39m=\u001b[39m [reporter() \u001b[39mfor\u001b[39;00m reporter \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mmetric_reporters\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[1;32m    379\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metrics \u001b[39m=\u001b[39m Metrics(metric_config, reporters)\n\u001b[0;32m--> 381\u001b[0m client \u001b[39m=\u001b[39m KafkaClient(metrics\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_metrics, metric_group_prefix\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mproducer\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[1;32m    382\u001b[0m                      wakeup_timeout_ms\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconfig[\u001b[39m'\u001b[39;49m\u001b[39mmax_block_ms\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[1;32m    383\u001b[0m                      \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconfig)\n\u001b[1;32m    385\u001b[0m \u001b[39m# Get auto-discovered version from client if necessary\u001b[39;00m\n\u001b[1;32m    386\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mapi_version\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages/kafka/client_async.py:244\u001b[0m, in \u001b[0;36mKafkaClient.__init__\u001b[0;34m(self, **configs)\u001b[0m\n\u001b[1;32m    242\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mapi_version\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    243\u001b[0m     check_timeout \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mapi_version_auto_timeout_ms\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m/\u001b[39m \u001b[39m1000\u001b[39m\n\u001b[0;32m--> 244\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mconfig[\u001b[39m'\u001b[39m\u001b[39mapi_version\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcheck_version(timeout\u001b[39m=\u001b[39;49mcheck_timeout)\n",
+      "File \u001b[0;32m~/Documents/git/edge-synthetic-data-generator/venv/lib/python3.8/site-packages/kafka/client_async.py:927\u001b[0m, in \u001b[0;36mKafkaClient.check_version\u001b[0;34m(self, node_id, timeout, strict)\u001b[0m\n\u001b[1;32m    924\u001b[0m \u001b[39m# Timeout\u001b[39;00m\n\u001b[1;32m    925\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    926\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock\u001b[39m.\u001b[39mrelease()\n\u001b[0;32m--> 927\u001b[0m     \u001b[39mraise\u001b[39;00m Errors\u001b[39m.\u001b[39mNoBrokersAvailable()\n",
+      "\u001b[0;31mNoBrokersAvailable\u001b[0m: NoBrokersAvailable"
+     ]
+    }
+   ],
    "source": [
     "produce_data(my_slice)"
    ]
@@ -384,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
