--- a/notebooks/12-generate-sensor-data.ipynb
+++ b/notebooks/12-generate-sensor-data.ipynb
@@ -25,10 +25,7 @@
    "source": [
     "# first, pip installs to ensure we have the correct packages\n",
     "\n",
-    "!pip install torch==1.11.0  # version recommended by source\n",
-    "!pip install -U gretel-synthetics==0.19.0\n",
-    "!pip install numpy==1.20.0  # for new concatenate feature\n",
-    "!pip install kafka-python==2.0.2"
+    "!pip install -r requirements.txt"
    ]
   },
   {
