--- a/notebooks/12-generate-sensor-data.ipynb
+++ b/notebooks/12-generate-sensor-data.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# first, pip installs to ensure we have the correct packages\n",
     "\n",
-    "!pip install -r requirements.txt"
+    "!pip install -q -r requirements.txt"
    ]
   },
   {
